[workspace]
resolver = "2"
members = [
  # Packages
  "packages/sycamore",
  "packages/sycamore-core",
  "packages/sycamore-futures",
  "packages/sycamore-macro",
  "packages/sycamore-reactive",
  "packages/sycamore-router",
  "packages/sycamore-router-macro",
  "packages/sycamore-web",

  # Examples
  "examples/*",

  # Website
  "docs",
  "website",

  # Tools
  "packages/tools/bench",
  "packages/tools/bench-diff",
]
