[workspace]
resolver = "2"
members = [
	# Packages
	"packages/sycamore",
	"packages/sycamore-core",
	"packages/sycamore-futures",
	"packages/sycamore-macro",
	"packages/sycamore-reactive",
	"packages/sycamore-router",
	"packages/sycamore-router-macro",
	"packages/sycamore-view-parser",
	"packages/sycamore-web",

	# Examples
	"examples/components",
	"examples/context",
	"examples/counter",
	"examples/http-request",
	"examples/http-request-builder",
	"examples/hydrate",
	"examples/iteration",
	"examples/js-framework-benchmark",
	"examples/hello-builder",
	"examples/hello-world",
	"examples/higher-order-components",
	"examples/motion",
	"examples/number-binding",
	"examples/router",
	"examples/ssr",
	"examples/ssr-suspense",
	"examples/ssr-streaming",
	"examples/svg",
	"examples/timer",
	"examples/todomvc",
	"examples/transitions",
	"examples/attributes-passthrough",
	"examples/js-snippets",

	# Tools
	"packages/tools/bench",
	"packages/tools/bench-diff",
]
# Only include packages as default workspace members.
default-members = [
	"packages/sycamore",
	"packages/sycamore-core",
	"packages/sycamore-futures",
	"packages/sycamore-macro",
	"packages/sycamore-reactive",
	"packages/sycamore-router",
	"packages/sycamore-router-macro",
	"packages/sycamore-view-parser",
	"packages/sycamore-web",
]

[workspace.package]
version = "0.9.2"

[workspace.dependencies]
sycamore = { path = "packages/sycamore", version = "0.9.2" }
sycamore-core = { path = "packages/sycamore-core", version = "0.9.2" }
sycamore-futures = { path = "packages/sycamore-futures", version = "0.9.2" }
sycamore-macro = { path = "packages/sycamore-macro", version = "0.9.2" }
sycamore-reactive = { path = "packages/sycamore-reactive", version = "0.9.2" }
sycamore-router = { path = "packages/sycamore-router", version = "0.9.2" }
sycamore-router-macro = { path = "packages/sycamore-router-macro", version = "0.9.2" }
sycamore-view-parser = { path = "packages/sycamore-view-parser", version = "0.9.2" }
sycamore-web = { path = "packages/sycamore-web", version = "0.9.2" }

[profile.bench]
debug = true

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
	"cfg(sycamore_force_ssr)",
	"cfg(rust_analyzer)",
] }
