[package]
edition = "2018"
name = "docs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
pulldown-cmark = "0.8.0"
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
syntect = "4.5.0"
walkdir = "2.3.2"
