[package]
authors = ["Luke Chu <37006668+lukechu10@users.noreply.github.com>"]
description = "A VDOM-less web library with fine grained reactivity"
edition = "2018"
homepage = "https://github.com/lukechu10/maple"
license = "MIT"
name = "maple-core-macro"
readme = "../README.md"
repository = "https://github.com/lukechu10/maple"
version = "0.1.0"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = {version = "1.0", features = ["full"]}
