[package]
authors = ["Luke Chu <37006668+lukechu10@users.noreply.github.com>"]
categories = ["gui", "wasm", "web-programming"]
description = "A VDOM-less web library with fine grained reactivity"
edition = "2018"
homepage = "https://github.com/lukechu10/maple"
keywords = ["wasm", "gui", "reactive"]
license = "MIT"
name = "maple-core"
readme = "../README.md"
repository = "https://github.com/lukechu10/maple"
version = "0.3.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maple-core-macro = {path = "../maple-core-macro", version = "0.3.1"}
serde = {version = "1.0", optional = true}
wasm-bindgen = "0.2.72"

[dependencies.web-sys]
features = [
  "console",
  "Comment",
  "Document",
  "DocumentFragment",
  "Element",
  "Event",
  "HtmlElement",
  "Node",
  "Text",
  "Window",
]
version = "0.3.48"

[dev-dependencies]
criterion = {version = "0.3", features = ["html_reports"]}
wasm-bindgen-test = "0.3"

[[bench]]
harness = false
name = "reactivity"
