[package]
authors = ["Luke Chu <37006668+lukechu10@users.noreply.github.com>"]
categories = ["gui", "wasm", "web-programming"]
description = "A VDOM-less web library with fine grained reactivity"
edition = "2018"
homepage = "https://github.com/lukechu10/maple"
keywords = ["wasm", "gui", "reactive"]
license = "MIT"
name = "maple-core"
readme = "../README.md"
repository = "https://github.com/lukechu10/maple"
version = "0.4.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html-escape = "0.2.7"
maple-core-macro = {path = "../maple-core-macro", version = "0.4.3"}
ref-cast = "1.0"
serde = {version = "1.0", optional = true}
wasm-bindgen = "0.2"

[dependencies.web-sys]
features = [
  "console",
  "Comment",
  "Document",
  "DocumentFragment",
  "Element",
  "Event",
  "HtmlElement",
  "Node",
  "Text",
  "Window",
]
version = "0.3"

[dev-dependencies]
criterion = {version = "0.3", features = ["html_reports"]}
wasm-bindgen-test = "0.3"

[features]
default = ["dom"]
dom = []
ssr = ["html-escape"]

[[bench]]
harness = false
name = "reactivity"

[package.metadata.docs.rs]
all-features = true
default-target = "wasm32-unknown-unknown"
