[package]
authors = ["Luke Chu <37006668+lukechu10@users.noreply.github.com>"]
categories = ["gui", "wasm", "web-programming"]
description = "A VDOM-less web library with fine grained reactivity"
edition = "2018"
homepage = "https://github.com/lukechu10/maple"
keywords = ["wasm", "gui", "reactive"]
license = "MIT"
name = "maple-core"
readme = "../README.md"
repository = "https://github.com/lukechu10/maple"
version = "0.4.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = {version = "3.6", features = ["boxed"]}
chrono = {version = "0.4", features = ["wasmbind"]}
html-escape = {version = "0.2.7", optional = true}
js-sys = {version = "0.3", optional = true}
maple-core-macro = {path = "../maple-core-macro", version = "0.4.3"}
ref-cast = "1.0"
serde = {version = "1.0", optional = true}
wasm-bindgen = {version = "0.2", optional = true}

[dependencies.web-sys]
features = [
  "console",
  "Comment",
  "Document",
  "DocumentFragment",
  "Element",
  "Event",
  "HtmlElement",
  "HtmlInputElement",
  "Node",
  "Text",
  "Window",
]
optional = true
version = "0.3"

[dev-dependencies]
criterion = {version = "0.3", features = ["html_reports"]}
wasm-bindgen-test = "0.3"

[features]
default = ["dom", "wasm-bindgen", "web-sys", "js-sys"]
dom = []
ssr = ["html-escape"]

[[bench]]
harness = false
name = "reactivity"

[[bench]]
harness = false
name = "ssr"

[[test]]
name = "ssr"
required-features = ["ssr"]

[package.metadata.docs.rs]
all-features = true
default-target = "wasm32-unknown-unknown"
