[package]
authors = ["Luke Chu <37006668+lukechu10@users.noreply.github.com>"]
edition = "2018"
name = "website"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
js-sys = "0.3.55"
log = "0.4.14"
pulldown-cmark = "0.8.0"
reqwasm = "0.2.1"
serde-lite = { version = "0.2.0", features = ["derive"] }
serde_json = "1.0.68"
sycamore = {path = "../packages/sycamore"}
sycamore-router = {path = "../packages/sycamore-router"}
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.28"

[dev-dependencies]
docs = {path = "../docs"}

[dependencies.web-sys]
features = ["MediaQueryList", "Storage", "Window"]
version = "0.3.55"
