[package]
name = "website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
js-sys = "0.3.60"
log = "0.4.17"
reqwasm = "0.5.0"
serde-lite = { version = "0.3.2", features = ["derive"] }
serde_json = "1.0.89"
sycamore = { path = "../packages/sycamore", features = ["suspense"] }
sycamore-router = { path = "../packages/sycamore-router" }
wasm-bindgen = "0.2.83"

[dependencies.web-sys]
features = ["CssStyleDeclaration", "MediaQueryList", "Storage", "Window"]
version = "0.3.60"
