[package]
name = "website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
gloo-net = { version = "0.6.0", features = ["http"] }
serde-lite = { version = "0.5.0", features = ["derive"] }
serde_json = "1.0.89"
sycamore = { path = "../packages/sycamore", features = ["suspense"] }
sycamore-router = { path = "../packages/sycamore-router" }

[dependencies.web-sys]
features = ["CssStyleDeclaration", "MediaQueryList", "Storage", "Window"]
version = "0.3.60"
