[package]
name = "hello-world-v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
log = "0.4.17"
sycamore-core = { path = "../../packages/sycamore-core" }
sycamore-reactive = { path = "../../packages/sycamore-reactive" }
sycamore-web = { path = "../../packages/sycamore-web", features = [
    "dom",
    "ssr",
    "silence_dom_ssr_features_error",
] }
wasm-bindgen = "0.2.83"
wasm-logger = "0.2.0"
