[package]
authors = ["Luke Chu <37006668+lukechu10@users.noreply.github.com>"]
edition = "2018"
name = "hello"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
log = "0.4.14"
maple-core = {path = "../../maple-core"}
wasm-bindgen = "0.2.71"

[dependencies.web-sys]
features = ["HtmlInputElement", "InputEvent"]
version = "0.3"
