[package]
name = "http-request"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
log = "0.4.17"
reqwasm = "0.5.0"
serde = "1.0.147"
sycamore = { path = "../../packages/sycamore", features = ["suspense"] }
