[package]
name = "js-framework-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.8", features = ["js"] }
rand = "0.8.5"
sycamore = { path = "../../packages/sycamore" }
web-sys = "0.3.60"
