[package]
name = "page-visit-counter-tailwindcss"
version = "0.1.0"
edition = "2018"
publish = false
authors = ["Aayush Attri <attriaayush@yahoo.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwasm = "0.3.1"
anyhow = "1.0"
serde = "1.0"
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
log = "0.4.14"
sycamore = { path = "../../packages/sycamore", features = ["futures"] }
