[package]
authors = ["Ben Schattinger <developer@lights0123.com>"]
edition = "2018"
name = "ssr"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = {path = "../../packages/sycamore", features = ["ssr"]}
