[package]
name = "todomvc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
log = "0.4.17"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
sycamore = { path = "../../packages/sycamore", features = ["serde"] }
uuid = { version = "1.2.2", features = ["serde", "v4", "js"] }
wasm-bindgen = "0.2.92"

[dependencies.web-sys]
features = ["Location", "Storage", "HtmlInputElement"]
version = "0.3.60"
